# hiviewdfx_hilog

./: .gitignore  Cargo.toml  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  hilog.gni  ohos.build  platformlog.gni  rustfmt.toml
adapter/: BUILD.gn  LICENSE  properties.cpp  properties.h  socket_server_adapter.cpp
base/: BUILD.gn  dgram_socket_client_base.cpp  dgram_socket_client_base.h  hilog_base.cpp  hilog_input_socket_client_base.cpp  hilog_input_socket_client_base.h  hilog_printf_base.cpp  socket_client_base.cpp  socket_client_base.h
frameworks/hilog_ndk/: BUILD.gn  hilog_ndk.c
frameworks/include/: hilog_inner.h
frameworks/libhilog/: BUILD.gn  hilog_printf.cpp
frameworks/libhilog/base/: hilog_base.c  hilog_base.cpp
frameworks/libhilog/include/: hilog_base.h  hilog_cmd.h  hilog_common.h  hilog_msg.h
frameworks/libhilog/ioctl/: log_ioctl.cpp
frameworks/libhilog/ioctl/include/: log_ioctl.h
frameworks/libhilog/param/: properties.cpp
frameworks/libhilog/param/include/: properties.h
frameworks/libhilog/snapshot/: hilog_snapshot.c
frameworks/libhilog/socket/: dgram_socket_client.cpp  dgram_socket_server.cpp  hilog_input_socket_client.cpp  hilog_input_socket_server.cpp  seq_packet_socket_client.cpp  seq_packet_socket_server.cpp  socket.cpp  socket_client.cpp  socket_server.cpp  socket_server_adapter.cpp
frameworks/libhilog/socket/include/: dgram_socket_client.h  dgram_socket_server.h  hilog_input_socket_client.h  hilog_input_socket_server.h  seq_packet_socket_client.h  seq_packet_socket_server.h  socket.h  socket_client.h
frameworks/libhilog/utils/: format.cpp  log_print.cpp  log_utils.cpp
frameworks/libhilog/utils/include/: format.h  log_print.h  log_time_stamp.h  log_timestamp.h  log_utils.h
frameworks/libhilog/vsnprintf/: output_p.inl  vsnprintf_s_p.c  vsnprintf_s_p.cpp  vsprintf_p.c
frameworks/libhilog/vsnprintf/include/: vsnprintf_s_p.h  vsprintf_p.c  vsprintf_p.h
frameworks/native/: BUILD.gn  dgram_socket_client.cpp  dgram_socket_server.cpp  format.cpp  hilog_base.cpp  hilog_inner.h  hilog_input_socket_client.cpp  hilog_input_socket_server.cpp  hilog_ndk.c  hilog_printf.cpp  linux_utils.cpp  output_p.inl  seq_packet_socket_server.cpp  socket.cpp  socket_client.cpp  socket_server.cpp  vsnprintf_s_p.cpp  vsnprintf_s_p.h
frameworks/native/hilog_ndk/: BUILD.gn  hilog_ndk.c
frameworks/native/include/: dgram_socket_client.h  dgram_socket_server.h  format.h  hilog_common.h  hilog_input_socket_client.h  hilog_input_socket_server.h  hilog_trace.h  hilogtool_msg.h  linux_utils.h  log_time_stamp.h  seq_packet_socket_client.h  seq_packet_socket_server.h  socket.h  socket_server.h
frameworks/sandbox_log/: app_file_manager.cpp  appbox_logger.cpp  log_file_manager.cpp  log_mmap_manager.cpp  page_switch_log.cpp  sandbox_logger.cpp  sandbox_utils.cpp
frameworks/sandbox_log/include/: app_file_manager.h  appbox_logger.h  log_file_manager.h  log_mmap_manager.h  sandbox_logger.h  sandbox_utils.h
interfaces/: bundle.json
interfaces/ani/: BUILD.gn  arktsconfig.json  hilog_ani.cpp  hilog_ani.h
interfaces/cj/: BUILD.gn
interfaces/cj/src/: hilog_ffi.cpp
interfaces/ets/ani/: BUILD.gn
interfaces/ets/ani/hilog/: BUILD.gn
interfaces/ets/ani/hilog/ets/: @ohos.hilog.ets
interfaces/ets/ani/hilog/include/: ani_util.h  hilog_ani.h  hilog_ani_base.h
interfaces/ets/ani/hilog/src/: ani_util.cpp  hilog_ani.cpp  hilog_ani_base.cpp
interfaces/js/kits/napi/: BUILD.gn
interfaces/js/kits/napi/src/common/napi/: n_class.cpp  n_class.h  n_exporter.h  (+6 more)
interfaces/js/kits/napi/src/hilog/: module.cpp
interfaces/native/: bundle.json
interfaces/native/innerkits/: BUILD.gn  libhilog.map
interfaces/native/innerkits/include/: hilog_trace.h
interfaces/native/innerkits/include/hilog/: log.h  log_c.h  log_cpp.h
interfaces/native/innerkits/include/hilog_base/: log_base.h
interfaces/native/innerkits/include/hilog_snapshot/: log_snapshot.h
interfaces/native/kits/: BUILD.gn  libhilog.ndk.json
interfaces/native/kits/include/hilog/: log.h
interfaces/rust/: BUILD.gn  Cargo.toml
interfaces/rust/src/: lib.rs  macros.rs
interfaces/sandbox_log/: BUILD.gn  libsandboxlog.map
interfaces/sandbox_log/include/: page_switch_log.h  page_switch_log_c.h  page_switch_log_cpp.h
platform/: BUILD.gn  hilog.cpp  hilog_printf.cpp  hilog_utils.cpp
platform/interface/native/: log.cpp  log.h
services/: bundle.json
services/hilogd/: BUILD.gn  cmd_executor.cpp  compressing_rotator.cpp  flow_control.cpp  flow_control_init.cpp  kmsg_parser.cpp  log_buffer.cpp  log_collector.cpp  log_compress.cpp  log_domains.cpp  log_kmsg.cpp  log_persister.cpp  log_persister_rotator.cpp  log_querier.cpp  log_reader.cpp  log_stats.cpp  main.cpp  service_controller.cpp
services/hilogd/etc/: BUILD.gn  hilog.para  hilog.para.dac  hilogd.cfg  hilogd.rc
services/hilogd/include/: cmd_executor.h  compressing_rotator.h  flow_control.h  flow_control_init.h  hilogd.h  kmsg_parser.h  log_buffer.h  log_collector.h  log_compress.h  log_data.h  log_domains.h  log_filter.h  log_kmsg.h  log_msg_wrapper.h  log_persister.h  log_persister_rotator.h  log_querier.h  log_reader.h  log_stats.h  log_time_stamp.h  service_controller.h
services/hilogtool/: BUILD.gn  log_controller.cpp  log_display.cpp  main.cpp
services/hilogtool/include/: hilogtool.h  log_controller.h  log_display.h
test/: BUILD.gn
test/fuzztest/hilogclient_fuzzer/: BUILD.gn  hilogclient_fuzzer.cpp  hilogclient_fuzzer.h  project.xml
test/fuzztest/hilogclient_fuzzer/corpus/: init
test/fuzztest/hilogserver_fuzzer/: BUILD.gn  hilogserver_fuzzer.cpp  hilogserver_fuzzer.h
test/moduletest/: BUILD.gn  hilog_command_test.cpp
test/moduletest/common/: adapter_test.cpp  hilog_base_ndk_test.cpp  hilog_ndk_test.cpp  hilog_ndk_z_test.cpp
test/unittest/common/: BUILD.gn  hilog_print_test.cpp  hilog_print_test.h  hilog_utils_test.cpp  hilog_utils_test.h  hilogtool_test.cpp  hilogtool_test.h
test/unittest/sandboxLog/: BUILD.gn  page_switch_log_test.cpp
test/utils/: BUILD.gn  test_utils.cpp
test/utils/include/: test_utils.h
(+4 files in other folders)
