# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("hilog_ndk") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  include_dirs = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//base/hiviewdfx/hilog/frameworks/include/",
  ]

  sources = [ "hilog_ndk.c" ]

  deps = [ "../../interfaces/native/innerkits:libhilog" ]

  install_images = [
    system_base_dir,
    "updater",
  ]
  innerapi_tags = [ "ndk" ]
  part_name = "hilog"
  subsystem_name = "hiviewdfx"
}
