# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hilog/hilog.gni")
import("//build/ohos.gni")

ohos_shared_library("cj_hilog_ffi") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  defines = []
  include_dirs = [
    "//base/hiviewdfx/hilog/frameworks/libhilog/param/include",
    "//base/hiviewdfx/hilog/frameworks/libhilog/include",
  ]

  sources = [
    "src/hilog_ffi.cpp",
  ]

  deps = [
    "../native/innerkits:libhilog"
  ]

  external_deps = []

  innerapi_tags = [ "platformsdk" ]

  part_name = "hilog"
  subsystem_name = "hiviewdfx"
}
