# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hilog/hilog.gni")
import("//build/ohos.gni")

sandbox_log_root = "//base/hiviewdfx/hilog/frameworks/sandbox_log"

config("libsandboxlog_pub_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

config("libsandboxlog_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$sandbox_log_root/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]
}

ohos_shared_library("libsandboxlog") {
  public_configs = [ ":libsandboxlog_pub_config" ]
  configs = [ ":libsandboxlog_config" ]

  sources = [
    "$sandbox_log_root/page_switch_log.cpp",
    "$sandbox_log_root/sandbox_logger.cpp",
    "$sandbox_log_root/log_file_manager.cpp",
    "$sandbox_log_root/log_mmap_manager.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD002D00",
    "LOG_TAG=\"SandboxLog\"",
  ]

  # 依赖同模块下的libhilog
  deps = [ "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog" ]

  # 外部依赖
  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "ffrt:libffrt",
  ]

  # 共享库配置
  output_extension = "so"
  version_script = "libsandboxlog.map"

  # 安装配置
  install_enable = true
  install_images = [ "system" ]

  # 安全配置
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
  }

  # 标签配置（内部接口）
  innerapi_tags = [ "platformsdk" ]

  subsystem_name = "hiviewdfx"
  part_name = "hilog"
}
