# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hilog_config") {
  visibility = [ ":*" ]

  include_dirs = [ "include" ]
}

ohos_executable("hilog") {
  sources = [
    "log_display.cpp",
    "main.cpp",
  ]

  configs = [
    ":hilog_config",
    "//base/hiviewdfx/hilog/frameworks/libhilog:libhilog_config",
  ]

  deps = [ "../../interfaces/native/innerkits:libhilog" ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "zlib:shared_libz",
  ]
  install_images = [
    "system",
    "updater",
  ]
  install_enable = true
  part_name = "hilog"
  subsystem_name = "hiviewdfx"
}
