# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "hilog/hilog"

config("module_private_config") {
  visibility = [ ":*" ]
}

ohos_moduletest("HilogCommandTest") {
  module_out_path = module_output_path

  sources = [ "hilog_command_test.cpp" ]

  configs = [
    ":module_private_config",
    "//base/hiviewdfx/hilog/frameworks/libhilog:libhilog_config",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//base/hiviewdfx/hilog/test/utils:test_utils",
  ]

  external_deps = [ "init:libbegetutil" ]

  include_dirs = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//base/hiviewdfx/hilog/frameworks/libhilog/include",
    "../utils/include",
    "../../frameworks/include",
  ]

  subsystem_name = "hiviewdfx"
  part_name = "hilog"
}
