# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("libhilog_pub_config") {
  visibility = [ ":*" ]

  include_dirs = [ "include" ]
}

ohos_shared_library("libhilog") {
  public_configs = [ ":libhilog_pub_config" ]

  deps = [
    "//base/hiviewdfx/hilog/adapter:libhilog_os_adapter",
    "//base/hiviewdfx/hilog/frameworks/native:libhilog_source",
    "//utils/native/base:utilsecurec_shared",
  ]

  output_extension = "so"
  install_enable = true

  part_name = "hilog"
  subsystem_name = "hiviewdfx"
}

ohos_shared_library("libhilog_native") {
  public_configs = [ ":libhilog_pub_config" ]

  deps = [
    "//base/hiviewdfx/hilog/adapter:libhilog_os_adapter_native",
    "//base/hiviewdfx/hilog/frameworks/native:libhilog_source",
    "//utils/native/base:utilsecurec_shared",
  ]

  output_name = "libhilog"
  output_extension = "so"
  install_enable = true

  part_name = "hiviewdfx_hilog_native"
  subsystem_name = "hiviewdfx"
}
